# PhoneAgent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_EN.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 404.html  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_CHANGES.md  GITHUB_PUBLISH_GUIDE.md  RELEASE_CHECKLIST.md  index.html  script.js  style.css
examples/: app_aliases.example.json  trajectory_example.json
scripts/: release_check.sh
src/phoneagent/: __init__.py  agent.py  cli.py  entrypoint.py
src/phoneagent/actions/: __init__.py  handler.py
src/phoneagent/adb/: __init__.py  command.py  connection.py  device.py  input.py  screenshot.py
src/phoneagent/apps/: __init__.py  aliases.py  catalog.py  discovery.py  intents.py  launcher.py  models.py  resolver.py
src/phoneagent/config/: __init__.py  apps.py  env.py  messages.py  prompts_zh.py  timing.py
src/phoneagent/devices/: __init__.py  android.py
src/phoneagent/model/: __init__.py  client.py
src/phoneagent/runtime/: __init__.py  events.py  recovery.py  state.py  state_machine.py  trajectory.py  verification.py
tests/: conftest.py  test_actions.py  test_agent_loop.py  test_app_resolution.py  test_env.py  test_recovery.py  test_state_machine.py  test_trajectory.py  test_verification.py  test_webui.py
webui/: README.md  __init__.py  runtime.py  server.py
webui/static/: app.js  index.html  style.css
